summative.moria.Moria.scala.error
Compilation error:
Moria:16: error: ')' expected but '}' found.
  }
  ^